--- a/projects/sae.html
+++ b/projects/sae.html
@@ -194,7 +194,7 @@
          <h2 style="color:#ffffff;">| Final Competition Plane<i>CP1</i></h2>
         <!-- CP1 Final CAD -->
         <br>
-        <img src ="../images/CP1" alt="pres" style="display: block; margin: 0 auto; width:75%; height:auto;">
+        <img src ="../images/CP1.png" alt="pres" style="display: block; margin: 0 auto; width:75%; height:auto;">
         <br>
         <p style="color: #ffffff; text-align: center; font-size: 1em;"> Final Competition Plane Assembly </p>
         
@@ -205,9 +205,20 @@
         <img src ="../images/emptyplane mass.png" alt="pres" style="display: block; margin: 0 auto; width:75%; height:auto;">
         <br>
         <p style="color: #ffffff; text-align: center; font-size: 1em;"> Empty Plane Component Weight Breakdown </p>
-        <br>
-        <br>
+
         <!--Competition Photos & Videos-->
+        <br>
+        <br>
+        <h2 style="color:#ffffff;">| Competition Photos & Videos<i>CP1</i></h2>
+        <br>
+        <br>
+        <!--
+        <div style="display: flex; justify-content: space-between; align-items: center;">
+            <img src ="../images/V-stab jig.png" alt="pres" style="width: 30%; height: auto;">
+            <img src="../images/green_spacer.png" alt="pres" style="width: 30%; height: auto;">
+            <img src="../images/green_spacer_back.png" alt="pres" style="width: 30%; height: auto;">
+        </div>
+        -->
         </div>
     </section>
 </body>
