--- a/projects/sae.html
+++ b/projects/sae.html
@@ -119,7 +119,7 @@
         <br>
 
         <!-- Jig Stands -->
-        <h2 style="color:#ffffff;"> Manufacturing Jig Stands<i>XP1</i></h2>
+        <h2 style="color:#ffffff;"> Manufacturing Jig Stands <i>XP1</i></h2>
         <p style="color: #ffffff;"> This project encompassed the creation of jig stands tailored for manufacturing empennage control systems and fuselage sections.
              The purpose of these jigs were to enhance repeatability, accuracy, and ease in production assembly. Functioning as a pivotal element, this equipment
               played a crucial role in maintaining the quality and functionality of our control surface components, serving as a foundational support for manufacturing
@@ -166,7 +166,7 @@
             To guarantee precise, repeatable builds, I created an empennage test stand featuring movable metal jigs separated by custom 3D‑printed PETG spacers.
             Production began with laser‑cut ribs and wood spacers; the stand aligned these parts while steam‑bent balsa leading edges and flat balsa trailing edges
             were glued in place, followed by servo and electronics installation. The chief hurdles were ensuring adequate servo clearance and maintaining a
-            perfect 90° joint between aluminum members, solved by the PETG spacer’s integrated notches and center bore. The project deepened my understanding
+            perfect 90° joint between aluminum members, solved by the PETG spacer's integrated notches and center bore. The project deepened my understanding
             of design‑for‑manufacture, CAD, laser cutting, and the material‑specific handling of plastics, woods, and metals.
         </p>
 
@@ -178,6 +178,13 @@
             During the winter break, our team split up manufacturing work into two winter break sessions "WB1" and "WB2".  The first session focused on manufacturing XP1, the second session focused on creating a finalized protype for the competition (CP1).
         </p>
         <br>
+        <br>
+
+        <div style="display: flex; justify-content: space-between; align-items: center;">
+            <img src="../images/IMG_6955.JPG" alt="pres" style="width: 45%; height: auto;">
+            <img src="../images/IMG_6958.JPG" alt="pres" style="width: 45%; height: auto;">
+        </div>
+        <p style="color: #ffffff; text-align: center; font-size: 1em;"> Late night winter break manufacturing.</p>
         <br>
 
         <!-- Flight Test Video -->
@@ -204,21 +211,33 @@
         <br>
         <img src ="../images/emptyplane mass.png" alt="pres" style="display: block; margin: 0 auto; width:75%; height:auto;">
         <br>
-        <p style="color: #ffffff; text-align: center; font-size: 1em;"> Empty Plane Component Weight Breakdown </p>
+        <p style="color: #ffffff; text-align: center; font-size: 1em;"> Empty Plane Weight Percentages </p>
 
         <!--Competition Photos & Videos-->
         <br>
         <br>
-        <h2 style="color:#ffffff;">| Competition Photos & Videos<i>CP1</i></h2>
+        <h2 style="color:#ffffff;">|Competition Photos & Videos <i>CP1</i></h2>
         <br>
         <br>
-        <!--
         <div style="display: flex; justify-content: space-between; align-items: center;">
-            <img src ="../images/V-stab jig.png" alt="pres" style="width: 30%; height: auto;">
-            <img src="../images/green_spacer.png" alt="pres" style="width: 30%; height: auto;">
-            <img src="../images/green_spacer_back.png" alt="pres" style="width: 30%; height: auto;">
+            <img src ="../images/team.jpg" alt="pres" style="width: 30%; height: auto;">
+            <img src="../images/IMG_3158.HEIC" alt="pres" style="width: 30%; height: auto;">
+            <img src="../images/IMG_5763.JPG" alt="pres" style="width: 30%; height: auto;">
         </div>
-        -->
+        <p style="color: #ffffff; text-align: center; font-size: 1em;"> SAE Aero West Competition at Fort Worth, TX.</p>
+        <br>
+        <a href="https://www.youtube.com/watch?v=wF7mqSnjIzs&t=1s&ab_channel=SAEUniversityPrograms"
+           class="video-thumb"
+           target="_blank" rel="noopener">
+            <img src="https://img.youtube.com/vi/wF7mqSnjIzs/maxresdefault.jpg"
+                 alt="Flight-test video thumbnail">
+            <span class="play-icon"></span>   
+        </a>
+        <p style="color: #ffffff; text-align: center; font-size: 1em;"> I show up nodding in approval at around ~2:19</p>
+        <br>
+        <br>
+        <img src ="../images/loop.mp4" alt="pres" style="width: 30%; height: auto;">
+        <p style="color: #ffffff; text-align: center; font-size: 1em;"> Celebratory loop-de-loop</p>
         </div>
     </section>
 </body>
