--- a/projects/sae.html
+++ b/projects/sae.html
@@ -221,7 +221,7 @@
         <br>
         <div style="display: flex; justify-content: space-between; align-items: center;">
             <img src ="../images/team.jpg" alt="pres" style="width: 30%; height: auto;">
-            <img src="../images/IMG_3158.HEIC" alt="pres" style="width: 30%; height: auto;">
+            <img src="../images/IMG_3158.jpg" alt="pres" style="width: 30%; height: auto;">
             <img src="../images/IMG_5763.JPG" alt="pres" style="width: 30%; height: auto;">
         </div>
         <p style="color: #ffffff; text-align: center; font-size: 1em;"> SAE Aero West Competition at Fort Worth, TX.</p>
@@ -236,7 +236,11 @@
         <p style="color: #ffffff; text-align: center; font-size: 1em;"> I show up nodding in approval at around ~2:19</p>
         <br>
         <br>
-        <img src ="../images/loop.mp4" alt="pres" style="width: 30%; height: auto;">
+        <!-- Embedded MP4 video -->
+        <video style="width: 30%; height: auto;" playsinline autoplay muted loop controls>
+            <source src="../images/loop.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
         <p style="color: #ffffff; text-align: center; font-size: 1em;"> Celebratory loop-de-loop</p>
         </div>
     </section>
