--- a/projects/sae.html
+++ b/projects/sae.html
@@ -237,7 +237,7 @@
         <br>
         <br>
         <!-- Embedded MP4 video -->
-        <video style="width: 30%; height: auto;" playsinline autoplay muted loop controls>
+        <video style="display: block; margin: 0 auto; width: 30%; height: auto;" playsinline autoplay muted loop controls>
             <source src="../images/loop.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
