--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <p>Modular robotic system capable of performing fertilizing and watering informed by sensor data collection and analysis.  This robot was designed to tread a long a 50-foot garden row with the goal of reducing physical strain associated with gardening maintenace through remote control.</p>
             <a href="https://tamueps.secure-platform.com/students/organizations/main/home">Engineering Project Showcase</a>
             <a href="projects/gcr.html">Read More</a>
+            <a href="https://github.com/Agu303/Garden-Robot" target="_blank">Github Repo</a>
         </div>
 
         <div class="project-card">
