--- a/projects/gcr.html
+++ b/projects/gcr.html
@@ -177,5 +177,45 @@ void receiveEvent(int) {
         <hr style="border:0;border-top:1px solid #757575;margin:3rem 0;">
         </div>
     </section>
+
+    <!-- PHOTO & VIDEO GALLERY -->
+    <h3 style="color:#ffffff;">| Gallery</h3>
+    <div style="display:flex;flex-wrap:wrap;gap:1.5rem;justify-content:center;">
+        <figure style="flex:1 1 45%;max-width:45%;text-align:center;">
+            <img src="../images/gcr_iso.png" alt="GCR ISO assembly" style="width:100%;height:auto;">
+            <figcaption style="color:#ffffff;font-size:0.9rem;">ISO view during final assembly – shows modular 8020 frame and protective side panels.</figcaption>
+        </figure>
+        <figure style="flex:1 1 45%;max-width:45%;text-align:center;">
+            <img src="../images/gcr_chassis_top.png" alt="Top-down chassis" style="width:100%;height:auto;">
+            <figcaption style="color:#ffffff;font-size:0.9rem;">Top-down look highlighting water &amp; fertilizer tanks and dual-Arduino enclosure.</figcaption>
+        </figure>
+        <figure style="flex:1 1 45%;max-width:45%;text-align:center;">
+            <img src="../images/gcr_side.png" alt="Side profile" style="width:100%;height:auto;">
+            <figcaption style="color:#ffffff;font-size:0.9rem;">Side profile illustrating compact ground clearance and chain-drive layout.</figcaption>
+        </figure>
+        <figure style="flex:1 1 45%;max-width:45%;text-align:center;">
+            <img src="../images/gcr_linearactuator.jpg" alt="Linear actuator" style="width:100%;height:auto;">
+            <figcaption style="color:#ffffff;font-size:0.9rem;">Close-up of the 100&nbsp;mm linear actuator responsible for fertilizer hatch-dispense control.</figcaption>
+        </figure>
+        <figure style="flex:1 1 45%;max-width:45%;text-align:center;">
+            <img src="../images/gcr_drivetrainmotorswith60AHbridge.jpg" alt="Drivetrain with 60A H-bridge" style="width:100%;height:auto;">
+            <figcaption style="color:#ffffff;font-size:0.9rem;">Drivetrain bench-test – twin 12&nbsp;V gear-motors wired through a 60&nbsp;A H-bridge.</figcaption>
+        </figure>
+        <figure style="flex:1 1 45%;max-width:45%;text-align:center;">
+            <img src="../images/gcr_3dprintmotorshaftadapter.jpg" alt="3-D printed shaft adapter" style="width:100%;height:auto;">
+            <figcaption style="color:#ffffff;font-size:0.9rem;">Custom 3-D printed motor-shaft adapter that aligns the sprocket chain drive.</figcaption>
+        </figure>
+        <!-- Video Demonstration -->
+        <figure style="flex:1 1 90%;max-width:90%;text-align:center;">
+            <video controls style="width:100%;height:auto;">
+                <source src="../images/gcr_testing.MOV" type="video/mp4">
+                Your browser does not support the video tag. <a href="../images/gcr_testing.MOV">Download video</a>.
+            </video>
+            <figcaption style="color:#ffffff;font-size:0.9rem;">Field trial clip.</figcaption>
+        </figure>
+    </div>
+    <br>
+
+    <hr style="border:0;border-top:1px solid #757575;margin:3rem 0;">
 </body>
 </html>
