--- a/projects/gcr.html
+++ b/projects/gcr.html
@@ -28,7 +28,7 @@
         <div class = "centered-content">
         <h1 style="color: #ffffff; text-align: center;">Garden Cultivation Robot</h1>
         <h2 style="color: #ffffff; text-align: center";><i>GCR</i></h2>
-        <h3 style="color: #ffffff; text-align: center;">Senior Engineering Capstone Project – Texas A&amp;M University</h3>
+        <h3 style="color: #ffffff; text-align: center;">Senior Engineering Capstone Project – Texas A&amp;M University</h3>
         <br>
         
         <!-- OVERVIEW -->
@@ -179,6 +179,7 @@ void receiveEvent(int) {
     </section>
 
     <!-- PHOTO & VIDEO GALLERY -->
+    <div class="centered-content">
     <h3 style="color:#ffffff;">| Gallery</h3>
     <div style="display:flex;flex-wrap:wrap;gap:1.5rem;justify-content:center;">
         <figure style="flex:1 1 45%;max-width:45%;text-align:center;">
@@ -214,7 +215,7 @@ void receiveEvent(int) {
             <figcaption style="color:#ffffff;font-size:0.9rem;">Field trial clip.</figcaption>
         </figure>
     </div>
-    <br>
+    </div>
 
     <hr style="border:0;border-top:1px solid #757575;margin:3rem 0;">
 </body>
