--- a/projects/gcr.html
+++ b/projects/gcr.html
@@ -46,8 +46,6 @@ The final prototype successfully achieved its core objectives. The robot feature
             <li>Developed <strong>dual-Arduino master-slave firmware</strong> with 2.4 GHz RF link for low-latency remote control.</li>
         </ul>
         <br>
-        <img src="../images/gcr_terrain_iso.png" alt="GCR prototype" style="display: block; margin: 0 auto; width:75%; height:auto;">
-        <br>
         <br>
         <!-- SYSTEM ARCHITECTURE TABLE -->
         <h3 style="color:#ffffff;">| System Architecture</h3>
@@ -72,7 +70,7 @@ The final prototype successfully achieved its core objectives. The robot feature
         </table>
         </div>
         <br>
-        <img src="../images/gcr_cad.png" alt="GCR CAD model" style="display: block; margin: 0 auto;">
+        <img src="../images/gcr_iso.png" alt="GCR CAD model" style="display: block; margin: 0 auto;">
         <br>
         <br>
         <!-- ELECTRONICS & CONTROL -->
@@ -204,11 +202,11 @@ void receiveEvent(int) {
         </figure>
         <figure style="flex:1 1 45%;max-width:45%;text-align:center;">
             <img src="../images/gcr_3dprintmotorshaftadapter.jpg" alt="3-D printed shaft adapter" style="width:100%;height:auto;">
-            <figcaption style="color:#ffffff;font-size:0.9rem;">Custom 3-D printed motor-shaft adapter that aligns the sprocket chain drive.</figcaption>
+            <figcaption style="color:#ffffff;font-size:0.9rem;">Custom 3-D printed motor-shaft adapter that aligns fertilizer disc motor.</figcaption>
         </figure>
         <!-- Video Demonstration -->
         <figure style="flex:1 1 90%;max-width:90%;text-align:center;">
-            <video controls style="width:100%;height:auto;">
+            <video controls style="width:50%;height:auto;">
                 <source src="../images/gcr_testing.MOV" type="video/mp4">
                 Your browser does not support the video tag. <a href="../images/gcr_testing.MOV">Download video</a>.
             </video>
