--- a/projects/gcr.html
+++ b/projects/gcr.html
@@ -82,6 +82,19 @@ The final prototype successfully achieved its core objectives. The robot feature
         </div>
         <p style="color:#ffffff; text-align:center;font-size:1em;">Dual-Arduino architecture, wiring schematic, and custom RC remote.</p>
         <br>
+
+        <!-- Electronics Housing Design -->
+        <p style="color:#ffffff;">
+            A custom electronics housing was designed and 3D printed to securely mount the battery and electronic components within the chassis. The housing features dedicated compartments for the battery, Arduino controllers, and power distribution boards, improving cable organization and preventing interference with the moving chain drive system. The design incorporates mounting points for secure attachment to the 8020 frame and includes ventilation slots for thermal management.
+        </p>
+        <div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:1rem;">
+            <img src="../images/gcr_elecHousingIso.png" alt="Electronics housing isometric view" style="width:32%;height:auto;">
+            <img src="../images/gcr_elecHousingTop.png" alt="Electronics housing top view" style="width:32%;height:auto;">
+            <img src="../images/gcr_electronicHousing.png" alt="Electronics housing implementation" style="width:32%;height:auto;">
+        </div>
+        <p style="color:#ffffff; text-align:center;font-size:1em;">CAD design and implementation of the custom electronics housing showing component layout and mounting features.</p>
+        <br>
+
         <!-- SUB-SYSTEMS -->
         <h3 style="color:#ffffff;">| Watering &amp; Fertilizing Modules</h3>
         <div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:1rem;">
@@ -102,46 +115,126 @@ The final prototype successfully achieved its core objectives. The robot feature
         <p style="color:#ffffff;">
             The firmware is split across two sketches – <code>Master_Code.ino</code> on an Arduino&nbsp;Uno and <code>Slave_Code.ino</code> on an Arduino&nbsp;Nano. The Uno reads raw PWM signals from the FlySky&nbsp;FS-i6X receiver, steers the drivetrain at 75&nbsp;Hz, and forwards any plant-care commands to the Nano over a 400&nbsp;kHz I<sup>2</sup>C bus (address&nbsp;0×08). The Nano in turn drives the high-current actuator, pumps, and conveyor motor so power wiring stays short and serviceable.
         </p>
+
+        <!-- Code Overview -->
+        <div style="background:#111;color:#0f0;padding:1rem;overflow-x:auto;font-size:0.9rem;margin:1rem 0;">
+            <h4 style="color:#0f0;margin-top:0;">Master Code (Arduino Uno)</h4>
+            <pre><code>// ───────── Motor Pins ─────────
+//Right motor
+#define PWM_A 9  // 
+#define A1    8  //
+#define A2    10 //
+
+#define PWM_B 11 // Left motor
+#define B1    12
+#define B2    13
+
+// ───────── RC Input Channels ─────────
+const int steeringPin = 2;
+const int throttlePin = 3;
+const int pumpPin = 5;
+const int actuatorPin = 4;
+const int motorPin = 6;
+
+// ───────── Signal Range + Thresholds ─────────
+#define PULSE_MIN  980
+#define PULSE_MAX  1980
+#define SPEED_MIN -255
+#define SPEED_MAX  255
+#define DEADZONE   20
+
+void loop() {
+  if (millis() - lastUpdate >= updateInterval) {
+    lastUpdate = millis();
+
+    int throttle, steering, pumpSignal;
+    readInputs(throttle, steering, pumpSignal);
+
+    int rightMotorSpeed, leftMotorSpeed;
+    calculateMotorSpeeds(throttle, steering, rightMotorSpeed, leftMotorSpeed);
+    applyMotorSpeeds(rightMotorSpeed, leftMotorSpeed);
+
+    int actuatorSignal = pulseIn(actuatorPin, HIGH);
+    int motorSignal = pulseIn(motorPin, HIGH);
+    sendToSlave(actuatorSignal, motorSignal, pumpSignal);
+  }
+}</code></pre>
+
+            <h4 style="color:#0f0;">Slave Code (Arduino Nano)</h4>
+            <pre><code>// ───── Pin Map ─────
+#define ACTUATOR_PWM 3
+#define ACTUATOR_IN1 5
+#define ACTUATOR_IN2 6
+
+#define MOTOR_ENA 9   // PWM-capable pin
+
+#define PUMP_A_ENA 10
+#define PUMP_B_ENA 11
+
+// ───── Thresholds ─────
+int prevActSignal = -1;
+const int deadzone = 10;
+
+void receiveEvent(int howMany) {
+  if (howMany < 6) return;
+
+  int actSignal   = (Wire.read() << 8) | Wire.read();
+  int motorSignal = (Wire.read() << 8) | Wire.read();
+  int pumpSignal  = (Wire.read() << 8) | Wire.read();
+
+  // ───── 12V Motor ─────
+  if (motorSignal > 1500) {
+    analogWrite(MOTOR_ENA, 255);
+  } else {
+    analogWrite(MOTOR_ENA, 0);
+  }
+
+  // ───── Pumps ─────
+  bool pumpON = pumpSignal > 1500;
+  analogWrite(PUMP_A_ENA, pumpON ? 255 : 0);
+  analogWrite(PUMP_B_ENA, pumpON ? 255 : 0);
+
+  // ───── Actuator Control ─────
+  if (actSignal < 1010) {
+    digitalWrite(ACTUATOR_IN1, LOW);
+    digitalWrite(ACTUATOR_IN2, HIGH);
+    analogWrite(ACTUATOR_PWM, 255);
+  } else if (actSignal > 1980) {
+    digitalWrite(ACTUATOR_IN1, HIGH);
+    digitalWrite(ACTUATOR_IN2, LOW);
+    analogWrite(ACTUATOR_PWM, 255);
+  } else {
+    // ... actuator position control logic ...
+  }
+}</code></pre>
+        </div>
+
+        <p style="color:#ffffff;">
+            The code implements a robust control system with several key features:
+        </p>
         <ul style="color:#ffffff;font-size:1.1rem;">
-            <li><strong>Master (Uno)</strong>
+            <li><strong>Master Controller (Uno)</strong>
                 <ul>
-                    <li><code>readInputs()</code> converts ±1000 µs RC pulses to ±255 PWM.</li>
-                    <li><code>calculateMotorSpeeds()</code> mixes throttle &amp; steering for skid-steer motion.</li>
-                    <li><code>applyMotorSpeeds()</code> updates the DRV8871 H-bridges every 50&nbsp;ms.</li>
-                    <li><code>sendToSlave()</code> packs three 16-bit control words (<em>actuator</em>, <em>motor</em>, <em>pump</em>) into a 6-byte I<sup>2</sup>C frame.</li>
-                    <li>Optional latency logger prints max/avg joystick-to-wheel delay for 30 s.</li>
+                    <li>Reads 5 RC channels (throttle, steering, pump, actuator, motor) at 20 Hz</li>
+                    <li>Implements differential drive with deadzone compensation</li>
+                    <li>Maps RC pulses (980-1980 µs) to motor speeds (-255 to 255)</li>
+                    <li>Includes debug output for real-time monitoring</li>
                 </ul>
             </li>
-            <li><strong>Slave (Nano)</strong>
+            <li><strong>Slave Controller (Nano)</strong>
                 <ul>
-                    <li><code>receiveEvent()</code> ISR unpacks the 6-byte frame.</li>
-                    <li>Implements dead-zones and full-range overrides for:<br>
-                        – Linear actuator (L298N&nbsp;#2)<br>
-                        – 12 V conveyor motor (L298N&nbsp;#2)<br>
-                        – Dual water pumps (L298N&nbsp;#1)</li>
-                    <li>Failsafe: outputs default to safe-off if no I<sup>2</sup>C traffic appears within the watchdog window.</li>
+                    <li>Controls high-current devices: linear actuator, conveyor motor, and dual pumps</li>
+                    <li>Implements threshold-based control for binary devices (pumps, motor)</li>
+                    <li>Uses position-based control for the linear actuator</li>
+                    <li>Includes debug output for actuator and pump states</li>
                 </ul>
             </li>
         </ul>
 
-        <pre style="background:#111;color:#0f0;padding:1rem;overflow-x:auto;font-size:0.9rem;"><code>// Master – sendToSlave()
-void sendToSlave(int act, int motor, int pump) {
-  Wire.beginTransmission(8);            // Nano address 0x08
-  Wire.write(highByte(act));  Wire.write(lowByte(act));
-  Wire.write(highByte(motor));Wire.write(lowByte(motor));
-  Wire.write(highByte(pump)); Wire.write(lowByte(pump));
-  Wire.endTransmission();
-}
-
-// Slave – receiveEvent()
-void receiveEvent(int) {
-  int act   = (Wire.read() << 8) | Wire.read();
-  int motor = (Wire.read() << 8) | Wire.read();
-  int pump  = (Wire.read() << 8) | Wire.read();
-  // ...hardware actuation...
-}
-</code></pre>
-        <p style="color:#ffffff; text-align:center; font-size:1em;">Measured end-to-end control latency: ≈5 ms.</p>
+        <p style="color:#ffffff;text-align:center;font-size:1em;">
+            <a href="../files/Garden-Robot-main/Master_Code.ino" style="color:#0f0;">View Complete Master Code</a> | 
+            <a href="../files/Garden-Robot-main/Slave_Code.ino" style="color:#0f0;">View Complete Slave Code</a>
+        </p>
         <br>
 
         <!-- ANALYSIS & VERIFICATION -->
@@ -150,11 +243,14 @@ void receiveEvent(int) {
             <li><strong>Field trials</strong> – Completed 50-ft traversal &amp; watering in 6 min with 0.01 m turn radius.</li>
             <li><strong>Throughput testing</strong> – 26 % higher consumable capacity than initial design spec.</li>
             <li><strong>Reliability</strong> – 60-hour endurance run with zero drivetrain or electronics failures.</li>
+            <li><strong>FEA</strong> – Aluminum 6061 Yield Strength: 5.515e7 Nsm. Horizontal load force: 83.4 lbf (equivalent to 10 gallon water weight). FOS: 3.78. 7 screw connections along 20 inch tank span length.</li>
         </ul>
+        <div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:1rem;margin:1rem 0;">
+            <img src="../images/gcr_rail.png" alt="GCR rail assembly" style="width:48%;height:auto;">
+            <img src="../images/rail_fea.jpg" alt="FEA analysis of rail assembly" style="width:48%;height:auto;">
+        </div>
         <br>
         <br>
-
-        
 
         <!-- IMPACT & LESSONS LEARNED -->
         <h3 style="color:#ffffff;">| Impact &amp; Lessons Learned</h3>
@@ -212,7 +308,35 @@ void receiveEvent(int) {
             </video>
             <figcaption style="color:#ffffff;font-size:0.9rem;">Field trial clip.</figcaption>
         </figure>
-    </div>
+
+        <!-- Engineering Drawings Appendix -->
+        <h3 style="color:#ffffff;margin-top:2rem;">| Engineering Drawings Appendix</h3>
+        <div style="display:flex;flex-wrap:wrap;gap:1.5rem;justify-content:center;">
+            <figure style="flex:1 1 45%;max-width:45%;text-align:center;">
+                <img src="../images/gcr_engdraw1.png" alt="AndyMark CIM Motor with 16-tooth pinion" style="width:100%;height:auto;">
+                <figcaption style="color:#ffffff;font-size:0.9rem;">Drawing 1: AndyMark CIM Motor with 16-tooth pinion - Primary drive motor with integrated pinion gear for chain drive system.</figcaption>
+            </figure>
+            <figure style="flex:1 1 45%;max-width:45%;text-align:center;">
+                <img src="../images/gcr_engdraw2.png" alt="AndyMark CIM Planetary Gearbox" style="width:100%;height:auto;">
+                <figcaption style="color:#ffffff;font-size:0.9rem;">Drawing 2: AndyMark CIM Planetary Gearbox - High-torque planetary gearbox for motor speed reduction and torque multiplication.</figcaption>
+            </figure>
+            <figure style="flex:1 1 45%;max-width:45%;text-align:center;">
+                <img src="../images/gcr_engdraw3.png" alt="15-tooth motor shaft sprocket" style="width:100%;height:auto;">
+                <figcaption style="color:#ffffff;font-size:0.9rem;">Drawing 3: 15-tooth motor shaft sprocket - Drive sprocket mounted on motor output shaft for chain drive system.</figcaption>
+            </figure>
+            <figure style="flex:1 1 45%;max-width:45%;text-align:center;">
+                <img src="../images/gcr_engdraw4.png" alt="45-tooth wheel shaft sprocket" style="width:100%;height:auto;">
+                <figcaption style="color:#ffffff;font-size:0.9rem;">Drawing 4: 45-tooth wheel shaft sprocket - Driven sprocket mounted on wheel shaft, providing 3:1 speed reduction.</figcaption>
+            </figure>
+            <figure style="flex:1 1 45%;max-width:45%;text-align:center;">
+                <img src="../images/gcr_engdraw5.png" alt="Block Bearing for Wheel and Motor shafts" style="width:100%;height:auto;">
+                <figcaption style="color:#ffffff;font-size:0.9rem;">Drawing 5: Block Bearing for Wheel and Motor shafts - Pillow block bearing assembly for supporting rotating shafts.</figcaption>
+            </figure>
+            <figure style="flex:1 1 45%;max-width:45%;text-align:center;">
+                <img src="../images/gcr_engdraw6.png" alt="Submersible Water Pump" style="width:100%;height:auto;">
+                <figcaption style="color:#ffffff;font-size:0.9rem;">Drawing 6: Submersible Water Pump - 12V DC submersible pump for water delivery system.</figcaption>
+            </figure>
+        </div>
     </div>
 
     <hr style="border:0;border-top:1px solid #757575;margin:3rem 0;">
