--- a/projects/sae.html
+++ b/projects/sae.html
@@ -82,7 +82,7 @@
 
 
         <!-- XP1 -->
-        <h2 style="color:#ffffff;">| Experimental Plane 1---<i>XP1</i></h2>
+        <h2 style="color:#ffffff;">| Experimental Plane 1 - <i>XP1</i></h2>
         <p style="color: #ffffff;"> After the ruleset was released, our team began work on our experimental plane design that would be used for flight testing during our school's winter break.  The
              '23 season had unique design requirments which include prohibition of fiber-reinforced plastics, rubber bands, and stability assistance.  Payload requirements required a regular boxed cargo, which must be carried 
              internally to the aircraft.  The cargo had to consist of a support assembly and payload plates that do not utilize tape or velcro.  The payload also had to be unloaded within 1 minute after a successful flight.
