--- a/projects/meen423.html
+++ b/projects/meen423.html
@@ -22,21 +22,83 @@
         </nav>
     </header>
 
+    <!-- ─────────── MAIN CONTENT ─────────── -->
     <section>
-        <h1 style="color: #ffffff; text-align: center;">Machine Learning Projects</h2>
-        <h3 style="color: #ffffff;">Ensemble ML for Mechanical Analysis</h3>
-        <p style="color: #ffffff;">The objective of this project was to accurately predict stress values from the material interface properties and strain input dataset. Since there is a non-linear relationship in the stress-strain behavior, I built a methodology that is built around the selection and averaging of model output that can capture this kind of relationship.</p>
-        <p style="color: #ffffff;">I selected ensemble-learning models (bagging and boosting) for this project (Inspired by lecture 24/25) to achieve better predictive performance than any one of the learners could do alone.  I chose random forest regressor (RF) and XGBoost (XGB) as bagging and boosting models, respectively.  I decided to go with an RF modeling since they are relatively easy to train and good against overfitting.  XGBoost was chosen, rather than the ADABoost, because it achieves better accuracy for structured numerical data since it is based on a Newton-Raphson method rather than gradient boosting like ADA.  This allows for faster convergence, better handling of curvature for loss, and improves accuracy.  By using both models, I believe that I can achieve robust and accurate results.</p>
-<<<<<<< HEAD
-        <p style="color: #ffffff;"> For model validation, I split the data into 5 sets and used k-fold cross-validation for both models. I used k=5 to provide a good balance between computational runtime and statistical reliability.  I didn't want to go with lower k values to prevent high variance.  Similarly I opted not to go with high k-values to prevent bias and excessive runtime.  Since I wasn't sure of the relative sizing of the .json dataset compared to other training situations, I went with a happy medium of k=5. The combined model averages all the predictions made by the RF and XGB models. This helps balance out any errors made by one model and improves individual model strengths.</p>
-        <img src="../images/ork_rocket.png" alt="ORK" style="display: block; margin: 0 auto; max-width: 1100px; height: auto;">
-=======
-        <p style="color: #ffffff;"> For model validation, I split the data into 5 sets and used k-fold cross-validation for both models. I used k=5 to provide a good balance between computational runtime and statistical reliability.  I didn’t want to go with lower k values to prevent high variance.  Similarly I opted not to go with high k-values to prevent bias and excessive runtime.  Since I wasn’t sure of the relative sizing of the .json dataset compared to other training situations, I went with a happy medium of k=5. The combined model averages all the predictions made by the RF and XGB models. This helps balance out any errors made by one model and improves individual model strengths.</p>
->>>>>>> 32f91310667261206caafd51cc7f6b7b99198593
-    </section>
+        <div class="centered-content">
+            <h1 style="color: #ffffff; text-align: center;">Machine Learning Projects</h1>
+            <h3 style="color: #ffffff; text-align: center;">MEEN 423 - Machine Learning for Mechanical Engineers</h3>
+            <br>
 
-    <section>
-        <h3 style="color: #ffffff;">Bitcoin Predictive Modeling</h3>
+            <!-- Project 1 -->
+            <h2 style="color:#ffffff;">| Project 1: Ensemble ML for Mechanical Analysis</h2>
+            <p style="color: #ffffff;">
+                Developed an ensemble machine learning approach to predict stress values from material interface properties and strain input data. The project focused on capturing non-linear stress-strain relationships through a sophisticated model selection and averaging methodology.
+            </p>
+
+            <h3 style="color:#ffffff;">| Technical Approach</h3>
+            <ul style="color:#ffffff; font-size:1.3rem;">
+                <li>Implemented ensemble learning models combining bagging and boosting techniques</li>
+                <li>Selected Random Forest Regressor (RF) for its anti-overfitting properties</li>
+                <li>Integrated XGBoost for superior handling of structured numerical data</li>
+                <li>Utilized Newton-Raphson method for faster convergence and improved accuracy</li>
+            </ul>
+
+            <h3 style="color:#ffffff;">| Model Validation</h3>
+            <p style="color: #ffffff;">
+                Implemented a robust validation strategy using k-fold cross-validation (k=5) to balance computational efficiency with statistical reliability. The combined model architecture averages predictions from both RF and XGB models, effectively:
+            </p>
+            <ul style="color:#ffffff; font-size:1.3rem;">
+                <li>Mitigating individual model errors</li>
+                <li>Leveraging complementary model strengths</li>
+                <li>Improving overall prediction accuracy</li>
+                <li>Maintaining computational efficiency</li>
+            </ul>
+
+            <div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:1rem;">
+                <img src="../images/ork_rocket.png" alt="Model Performance Visualization" style="width:48%;height:auto;">
+                <img src="../images/struct_workflow.png" alt="Model Architecture" style="width:48%;height:auto;">
+            </div>
+            <p style="color:#ffffff; text-align:center;font-size:1em;">Model performance metrics and architecture visualization</p>
+            <br>
+
+            <!-- Project 2 -->
+            <h2 style="color:#ffffff;">| Project 2: Bitcoin Price Prediction</h2>
+            <p style="color: #ffffff;">
+                Developed a time series analysis model to predict Bitcoin price movements using historical data and market indicators. The project focused on implementing advanced forecasting techniques while accounting for cryptocurrency market volatility.
+            </p>
+
+            <h3 style="color:#ffffff;">| Technical Approach</h3>
+            <ul style="color:#ffffff; font-size:1.3rem;">
+                <li>Implemented LSTM (Long Short-Term Memory) networks for sequence prediction</li>
+                <li>Utilized technical indicators as feature engineering</li>
+                <li>Applied data normalization and preprocessing techniques</li>
+                <li>Implemented rolling window validation for time series data</li>
+            </ul>
+
+            <h3 style="color:#ffffff;">| Model Performance</h3>
+            <p style="color: #ffffff;">
+                The model demonstrated significant improvements in prediction accuracy through:
+            </p>
+            <ul style="color:#ffffff; font-size:1.3rem;">
+                <li>Feature selection optimization</li>
+                <li>Hyperparameter tuning</li>
+                <li>Ensemble method integration</li>
+                <li>Real-time prediction capabilities</li>
+            </ul>
+
+            <div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:1rem;">
+                <img src="../images/bitcoinprice.png" alt="Bitcoin Price Prediction" style="width:48%;height:auto;">
+                <img src="../images/struct_workflow.png" alt="Prediction Model Architecture" style="width:48%;height:auto;">
+            </div>
+            <p style="color:#ffffff; text-align:center;font-size:1em;">Price prediction visualization and model architecture</p>
+            <br>
+
+            <hr style="border:0;border-top:1px solid #666;margin:3rem 0;">
+            <p style="color:#ffffff;text-align:center;font-weight:bold;">
+                TL;DR – Developed ensemble ML models for mechanical analysis and implemented LSTM-based Bitcoin price prediction, demonstrating advanced machine learning applications in engineering and finance.
+            </p>
+            <hr style="border:0;border-top:1px solid #757575;margin:3rem 0;">
+        </div>
     </section>
 </body>
 </html>
