--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="projects/about.html">About</a>
             <a href="files/Resume.pdf">Resume</a>
             <a href="https://github.com/Agu303" target="_blank">Github</a>
-            <a href="https://youtube.com/" target="_blank">Youtube</a>
+            <a href="https://www.youtube.com/@AG_1729-e" target="_blank">Youtube</a>
         </nav>
         <div class="header-text">
             <h1 class="header-name">Alvaro Guerra</h1>
@@ -66,7 +66,8 @@
             <img src="images/oL-logo.svg" alt="oL">
             <h2>openLayup</h2>
             <p>openLayup is an open-source, GUI-based structural simulation tool for aerospace structures. The software estimates key mechanical metrics such as stress, strain, and factor of safety based on material properties, ply layup configurations, and component geometries. It applies Classical Laminate Theory (CLT) and the Tsai-Wu failure criterion, enabling laminate-level failure-mode analysis across various aerospace components.</p>
-            <a href="projects/openLayup.html">Read More</a>
+            
+            <!--<a href="projects/openLayup.html">Read More</a> -->
             <a href="https://github.com/Agu303/openLayup" target="_blank">Github Repo</a>
         </div>
 
